# reinforcement_learning

./: .cproject  .project  CMakeCache.txt  CMakeCache1.txt  CMakeLists.txt  Makefile  ObjectTrackingNeuralNetwork.py  cmake_install.cmake  episodeLength.out  model.h5  model.json  modeltarget.h5  remember  results.txt
EpisodeLength/: episodeLength-test2.out  episodeLength-test3.out  episodeLength-test4.out  episodeLength-test5.out  episodeLength24-48-24-005.out
Models/: model-distanca_meimadh1.h5  model-test2.h5  model-test3.h5  model-test4.h5  model-test5.h5  model.h5  model1.h5  model2previous.h5  model2previous2.h5  model2previous3.h5  model_distanca_me_madhe2.h5
Remember/: remember2previous2  remember2previous3
Results/: remember2previous  results.txt  results2previous2.txt  results2previous3.txt  results2previuos.txt  results_distanca_me_e_madhe.txt  results_distanca_me_madhe.txt
Rezultate/Prova2/: info  model.h5  modeltarget.h5  remember  results.txt
Rezultate/Prova3/: info.txt  model.h5  modeltarget.h5  remember  results.txt
Rezultate/Untitled Folder/: model.h5  modeltarget.h5  remember  results.txt
controllers/: CMakeLists.txt  Makefile  cmake_install.cmake
controllers/obstacle_avoidance_path_finding/: CMakeLists.txt  Makefile  ObjectTrackingNeuralNetwork.cpp  cmake_install.cmake  obstacle_avoidance_path_finding.cpp  obstacle_avoidance_path_finding.h
embedding/: Makefile  cmake_install.cmake
experiments/: diffusion_1.argos  obstacle_avoidance_path_finding.argos
loop_functions/: CMakeLists.txt  Makefile  cmake_install.cmake
(+42 files in other folders)
